--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -1,12 +1,14 @@
 name: TG_Monitor
 on:
-  workflow_dispatch: # Запуск кнопкой
+  workflow_dispatch:
+  schedule:
+    - cron: '0 */6 * * *' # Перезапуск каждые 6 часов автоматически
 jobs:
   run:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Install dependencies
+      - name: Install
         run: pip install telethon requests
       - name: Run
         env:
