--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -1,18 +1,35 @@
-name: TG_Monitor
+name: Ghost Control Center
+
 on:
-  workflow_dispatch:
+  push:
+    branches: [ main ]
   schedule:
-    - cron: '0 */6 * * *' # Перезапуск каждые 6 часов автоматически
+    - cron: '0 */6 * * *' # Перезапуск каждые 6 часов для стабильности
+  workflow_dispatch: # Позволяет запускать вручную
+
 jobs:
-  run:
+  build:
     runs-on: ubuntu-latest
+    timeout-minutes: 350 # Максимальное время работы одного сеанса (около 6 часов)
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Install
-        run: pip install telethon requests
-      - name: Run
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install telethon requests
+
+      - name: Run Ghost System
         env:
           TG_API_ID: ${{ secrets.TG_API_ID }}
           TG_API_HASH: ${{ secrets.TG_API_HASH }}
+          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+          # Убедись, что FB_URL зашит в коде или добавь сюда как секрет
         run: python main.py
-        
