--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -1,35 +1,34 @@
-name: Ghost Control Center
+name: Ghost Monitor Loop
 
 on:
   push:
     branches: [ main ]
   schedule:
-    - cron: '0 */6 * * *' # Перезапуск каждые 6 часов для стабильности
-  workflow_dispatch: # Позволяет запускать вручную
+    - cron: '0 */6 * * *' # Перезапуск каждые 6 часов (автоматически)
+  workflow_dispatch: # Кнопка ручного запуска
 
 jobs:
-  build:
+  run-ghost:
     runs-on: ubuntu-latest
-    timeout-minutes: 350 # Максимальное время работы одного сеанса (около 6 часов)
+    timeout-minutes: 350 # Разрешаем работать почти 6 часов (максимум для GitHub)
 
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Install Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install telethon requests
+      - name: Install Dependencies
+        run: pip install telethon requests
 
-      - name: Run Ghost System
+      - name: Execute Script
         env:
           TG_API_ID: ${{ secrets.TG_API_ID }}
           TG_API_HASH: ${{ secrets.TG_API_HASH }}
-          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
-          # Убедись, что FB_URL зашит в коде или добавь сюда как секрет
-        run: python main.py
+        # Используем конструкцию, которая не дает процессу завершиться преждевременно
+        run: |
+          echo "🚀 Запуск мониторинга..."
+          python main.py
