--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -1,36 +1,53 @@
-name: Ghost Monitor Loop
+name: Ghost Continuous Loop
 
 on:
   push:
     branches: [ main ]
-  schedule:
-    - cron: '0 */6 * * *' # Авто-рестарт каждые 6 часов
-  workflow_dispatch: # Кнопка для ручного запуска
+  workflow_dispatch: # Позволяет запустить вручную
+  repository_dispatch: # Позволяет запускать через API (самозапуск)
+    types: [ restart_bot ]
 
 jobs:
   run-ghost:
     runs-on: ubuntu-latest
-    timeout-minutes: 350 # Лимит GitHub (почти 6 часов)
+    # Ставим чуть больше 2 часов, чтобы скрипт успел сам себя перезапустить
+    timeout-minutes: 130 
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Install Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
       - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install telethon requests
+        run: pip install telethon requests
 
-      - name: Execute Engine
+      - name: Run Engine & Self-Restart
         env:
           TG_API_ID: ${{ secrets.TG_API_ID }}
           TG_API_HASH: ${{ secrets.TG_API_HASH }}
-        # Конструкция '|| true' гарантирует, что шаг не пометится крестом при плановой остановке
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo "🚀 Starting Ghost System..."
-          python main.py || true
+          # 1. Запускаем бота в фоновом режиме
+          python main.py &
+          BOT_PID=$!
+          
+          echo "🚀 Бот запущен с PID $BOT_PID. Ждем 1 час 50 минут перед перезапуском..."
+          
+          # 2. Ждем 110 минут (1 час 50 минут)
+          sleep 6600
+          
+          echo "🔄 Время вышло. Отправляем сигнал на перезапуск..."
+          
+          # 3. Магия: заставляем GitHub запустить этот же воркфлоу заново
+          curl -X POST \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/${{ github.repository }}/dispatches \
+            -d '{"event_type": "restart_bot"}'
+          
+          echo "✅ Сигнал отправлен. Убиваем текущего бота."
+          kill $BOT_PID
