--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -1,20 +1,19 @@
-name: Ghost Continuous Loop
+name: Festka Ghost Bot
 
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:
-  repository_dispatch:
-    types: [ restart_bot ]
+  schedule:
+    - cron: '0 */6 * * *' # Автоперезапуск каждые 6 часов
+  workflow_dispatch: # Возможность запустить вручную
 
 jobs:
-  run-ghost:
+  build:
     runs-on: ubuntu-latest
-    timeout-minutes: 130 
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -23,26 +22,11 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          pip install telethon requests firebase-admin
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-      - name: Run Engine & Self-Restart
+      - name: Run Ghost Bot
         env:
           TG_API_ID: ${{ secrets.TG_API_ID }}
           TG_API_HASH: ${{ secrets.TG_API_HASH }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          # Запускаем бота в фоне
-          python main.py &
-          BOT_PID=$!
-          
-          # Ждем 110 минут (1 час 50 мин)
-          sleep 6600
-          
-          # Перезапуск через API GitHub
-          curl -X POST \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/${{ github.repository }}/dispatches \
-            -d '{"event_type": "restart_bot"}'
-          
-          kill $BOT_PID
+        run: python main.py
