--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -1,32 +1,37 @@
-name: Festka Ghost Bot
+name: Festka Ghost Runner
 
 on:
   push:
     branches: [ main ]
+  workflow_dispatch:
   schedule:
-    - cron: '0 */6 * * *' # Автоперезапуск каждые 6 часов
-  workflow_dispatch: # Возможность запустить вручную
+    - cron: '0 */6 * * *' # Перезапуск каждые 6 часов для стабильности
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
+      - name: Checkout Repository
         uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.9'
+          cache: 'pip'
 
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install telethon firebase-admin pytz
 
-      - name: Run Ghost Bot
+      - name: Run Festka Ghost
         env:
-          TG_API_ID: ${{ secrets.TG_API_ID }}
-          TG_API_HASH: ${{ secrets.TG_API_HASH }}
+          # Все данные берутся из секретов репозитория для безопасности
+          API_ID: ${{ secrets.API_ID }}
+          API_HASH: ${{ secrets.API_HASH }}
+          STRING_SESSION: ${{ secrets.STRING_SESSION }}
+          FIREBASE_URL: ${{ secrets.FIREBASE_URL }}
         run: python main.py
+        
