--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -1,37 +1,28 @@
-name: Festka Ghost Runner
+name: Festka Bot Runner
 
 on:
   push:
     branches: [ main ]
   workflow_dispatch:
-  schedule:
-    - cron: '0 */6 * * *' # Перезапуск каждые 6 часов для стабильности
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Repository
+      - name: Checkout Code
         uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
-          cache: 'pip'
+          python-version: '3.10'
 
       - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install telethon firebase-admin pytz
+        run: pip install telethon
 
-      - name: Run Festka Ghost
+      - name: Run Festka Bot
         env:
-          # Все данные берутся из секретов репозитория для безопасности
           API_ID: ${{ secrets.API_ID }}
           API_HASH: ${{ secrets.API_HASH }}
-          STRING_SESSION: ${{ secrets.STRING_SESSION }}
-          FIREBASE_URL: ${{ secrets.FIREBASE_URL }}
+          SESSION_STR: ${{ secrets.SESSION_STR }}
         run: python main.py
-        
