--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -3,8 +3,6 @@ name: Festka Bot Infinite Runner
 on:
   push:
     branches: [ main ]
-  schedule:
-    - cron: '0 */5 * * *'
   workflow_dispatch:
 
 permissions:
@@ -14,15 +12,11 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    concurrency:
-      group: festka-group
-      cancel-in-progress: true
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Set up Python Environment
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
@@ -30,21 +24,14 @@ jobs:
       - name: Install Telethon
         run: pip install telethon
 
+      - name: Check files
+        run: ls -R # Эта команда покажет нам в логах, видит ли GitHub твой main.py
+
       - name: Execute Festka Bot
         env:
-          # Используем твои точные названия секретов со скриншота
           API_ID: ${{ secrets.TG_API_ID }}
           API_HASH: ${{ secrets.TG_API_HASH }}
           SESSION_STR: ${{ secrets.STRING_SESSION }} 
         run: |
-          # Бот работает 5 часов, затем мягко завершается
-          timeout 5h python main.py || echo "Цикл завершен, готовим перезапуск..."
-
-      - name: Recursive Workflow Re-trigger
-        if: always()
-        run: |
-          # ВАЖНО: здесь теперь указано имя твоего файла monitor.yml
-          curl -X POST -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          https://api.github.com/repos/${{ github.repository }}/actions/workflows/monitor.yml/dispatches \
-          -d '{"ref":"main"}'
+          # Используем python3 и проверяем запуск
+          python3 main.py || echo "Скрипт не смог запуститься"
